...
                    }
                }
                
                // MARK: - List of Available Lines
                SectionedList(viewModel: viewModel, selectedLine: $selectedLine, selectedSnowLevel: $selectedSnowLevel)
            }
            .navigationTitle("Select a Line")
            .accessibilityIdentifier("LineWorthPickerView")
            .navigationBarTitleDisplayMode(.inline)
            .toolbar {
                ToolbarItem(placement: .confirmationAction) {
                    if selectedLine != nil {
                        Button("Add") {
                            dismiss()
                        }
                        .accessibilityIdentifier("AddLineButton")
                    }
                }
            }
        }
    }
    
...
